# src/models/ProofRequest.ts
@@ -1,0 +1,10 @@
+import mongoose from "mongoose";
+
+const ProofRequest = new mongoose.Schema({
+    id: String,
+    registryId: String,
+    challenge: String,
+    valid: Number
+});
+
+export default mongoose.model("ProofRequest", ProofRequest);
